# Best-Partner

./: .gitignore  4.1-跨端交互流程.md  TECHNICAL_FLOW.md  frontend design.md  start_stack.sh  test_qwen.py  记录  问题.md
agent/: Dockerfile  debug_qwen_output.py  pyproject.toml  requirements.txt
agent/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
agent/app/: main.py
agent/app/graph/: state.py
agent/app/prompt/: requirements_analysis_agent_prompt.py
agent/app/services/: llm.py  state_repo.py
agent/app/utils/: env.py
agent/best_partners_agent.egg-info/: requires.txt
backend/: package.json  requirements.txt
backend/app/: main.py  models.db
backend/app/routers/: models.py  requirements.py
backend/app/schemas/: requirements.py
backend/app/services/: agent_client.py  init_postgres_tables.py
frontend/: vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/pages/: Workspace.tsx
langchaintest/project/Best Partners/: .env  AI report v1.md  Best Partner UI design.md  (+1 more)
mywebsite/: # 前端开发规范与Cursor Agent工作流程.ini  README.md  package-lock.json  package.json  tailwind.config.js
mywebsite/Agent Knowledge/: 基本信息
mywebsite/backend/: .cursorrules  server.js
mywebsite/frontend/: .cursorrules  package-lock.json  package.json  webpack.config.js
mywebsite/mywebsite/: 审美偏好与设计成果.md
mywebsite/prd/: 1  1.1  1.3
mywebsite/public/: index.html
mywebsite/scripts/: figma-commands.js
mywebsite/src/: App.jsx
mywebsite/src/data/: cms.js  (+1 more)
mywebsite/项目文档/: 技术规范  架构规划  设计系统规范.md  需求文档
(+50 files in other folders)
