[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "best-partners-agent"
version = "0.1.0"
description = "Best Partners Agent Service with LangGraph"
requires-python = ">=3.9"

dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "pydantic==2.8.2",
    "langgraph>=0.2.0",
    "langchain>=0.2.0",
    "langchain-core>=0.2.0", 
    "langchain-community>=0.2.0",
    "langchain-openai>=0.1.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.0.0",
    "python-dotenv>=1.0.0",
    "orjson>=3.10.0",
    "dashscope>=1.17.0"
]

[project.optional-dependencies]
dev = [
    "langgraph-cli>=0.3.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*"]